# SolletShifter

./: .gitignore  Cargo.toml  README.md  config.json  package.json
Config/: Cargo.toml
Config/src/: lib.rs
QuickLogger/: Cargo.toml
QuickLogger/src/: lib.rs
SolletRPCServer/: .env  .env.example  Cargo.toml  diesel.me  diesel.toml
SolletRPCServer/config/: config copy.json  config.json  log4rs.yml
SolletRPCServer/src/: common.rs  jwt.rs  main.rs  model.rs  status.rs
SolletRPCServer/src/apis/account/: apis.rs
SolletRPCServer/src/db/: mod.rs  schema.rs
SolletRPCServer/src/db/account/: actors.rs  db_models.rs  message.rs  mod.rs  models.rs
SolletRPCServer/src/db/subaccount/: actors.rs  message.rs  mod.rs  models.rs
SolletRPCServer/src/middleware/: mod.rs  token_checker.rs
SolletRPCServer/src/routes/: mod.rs
SolletRPCServer/src/routes/account/: impls.rs
SolletRPCServer/src/routes/subaccount/: impls.rs
SolletShifter/: index.html  package.json  phantom_wallet.json  tailwind.config.ts  vite.config.ts
SolletShifter/src/: App copy.tsx11  App.css  App.tsx  JWT.tsx  MainFrame.css  MainFrame.tsx  Title.css  Title.tsx  jwt.tsx  main.tsx  solana.tsx  styles.css  wallet2.tsx
SolletShifter/src-tauri/: Cargo.toml  tauri.conf.json
SolletShifter/src-tauri/config/: config.json
SolletShifter/src-tauri/src/: main.rs
SolletShifter/src/Frames/: FrameAccountList.css  FrameAccountList.tsx  FrameCreateAccount.tsx  FrameImportAccount.css  FrameImportAccount.tsx  FrameTransfer.tsx  LoginFrame.css  LoginFrame.tsx
SolletShifter/src/commmon/: CallRustDelegate.ts  common.tsx
SolletShifter/src/componnet/: AccountInfoCard.css  AccountInfoCard.tsx  BackButton.css  BackButton.tsx  DirectionButton.css  DirectionButton.tsx  IconButtonEx.css  IconButtonEx.tsx  MenubarButton.css  MenubarButton.tsx  NetSelBlock.css  NetSelBolck.tsx  PhraseList.tsx  SnackPopbar.tsx
SolletShifter/src/request/: CryptoSupport.ts  HttpReqeust.ts  Locate.ts  SubAccountReq.ts  WalletSupport.ts  common.ts
SolletShifter/src/store/: index.ts
SolletShifter/src/store/modules/: LoginInfoStore.ts  SubAccountStore.ts
coins/: Cargo.toml
coins/src/: ckd_derive_path.rs  error.rs  lib.rs  mint.rs  solana.rs
dbengine/: Cargo.toml
dbengine/src/: lib.rs  model.rs  postgresql.rs  sqlite.rs  utils.rs
solana-service/: Anchor.toml
solana-service/programs/solana-service/: Cargo.toml
solana-service/programs/solana-service/src/: lib.rs
solana-service/tests/: solana-service.ts
