[package]
name = "SolletRPCServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt="2.9.0"
actix-web="4.5.1"
actix-cors="0.7.0"
serde={version = "1.0.197",features=["derive"]}
QuickLogger={path="../QuickLogger"}
Config={path="../Config"}
solana-client="1.18.10"
solana-sdk="1.18.10"
bip39="2.0.0"
