[package]
name = "SolletShifter"
version = "1.0.31"
description = "SolletShifter"
authors = ["kahn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "http-all", "shell-open", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
